# XWorkSpace

./: .ycm_extra_conf.py  CMakeLists.txt  README.md
otherLib/glad/include/glad/: glad.h
src/modules/: CMakeLists.txt
src/modules/app/: CMakeLists.txt  glad.c  main.cc
src/modules/template/: CMakeLists.txt  base.h  test.hpp
src/modules/template/MetaNN/: VarTypeDict.h  policy_container.h
src/modules/template/algo/: binaryTree.hpp  binaryTreeNode.hpp
src/modules/template/algo/sort/: quick_sort.hpp
src/modules/template/mystl/: type_traits.hpp  until.hpp
src/modules/tools/: CMakeLists.txt  DebugLog.cpp  DebugLog.h
tests/: CMakeLists.txt
tests/mystl/: binaryTree.hpp  main.cc
tests/opencv/: apiTest.hpp  main.cc
tests/template/: VarTypeDict.hpp  main.cc  policy.hpp  test.hpp
version/: version.md
